[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/Nodes/ValueSlider.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/misc/value_slider.png" type="Texture" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="ValueSlider" type="TextureProgress"]
margin_right = 6.0
margin_bottom = 6.0
rect_min_size = Vector2( 32, 24 )
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme_type_variation = "ValueSlider"
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0, 0, 0, 1 )
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/read_only = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "0"
align = 1
editable = false
selecting_enabled = false

[connection signal="value_changed" from="." to="." method="_on_value_changed"]
[connection signal="focus_exited" from="LineEdit" to="." method="_confirm_text"]
[connection signal="gui_input" from="LineEdit" to="." method="_on_LineEdit_gui_input"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
